...
                                <rect key="frame" x="67" y="63" width="241" height="215"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rg8-Vt-JC1">
                                <rect key="frame" x="39" y="370" width="297" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.83902472257614136" green="0.83867067098617554" blue="0.87174397706985474" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="SignUP">
                                    <color key="titleColor" red="0.95140844583511353" green="0.24754372239112854" blue="0.17273285984992981" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <color key="backgroundColor" red="0.83902472257614136" green="0.83867067098617554" blue="0.87174397706985474" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Enter">
                                    <color key="titleColor" red="0.93497627973556519" green="0.3314974308013916" blue="0.34713020920753479" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <color key="titleShadowColor" red="0.83902472257614136" green="0.83867067098617554" blue="0.87174397706985474" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WKc-92-Dv8">
                                <rect key="frame" x="39" y="332" width="297" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Cancel">
                                    <color key="titleColor" red="0.54917329549789429" green="0.86685013771057129" blue="0.91403502225875854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="Create">
                                    <color key="titleColor" red="0.97122436759999997" green="0.2510903478" blue="0.18562966589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
