...
        
        var error: String!
        var describe: String!
        
        switch errorToDescribe {
        case .invalidName:
            error = "Nome Invalido"
            describe = "o nome precisa de no minimo duas letras"
        case .invalidEmail:
            error = "Email Invalido"
            describe = "o e mail precisa de um @"
        case .invalidDate:
            error = "Idade Invalida"
...
